fix: contacts container flex wrap

--- a/assets/styles/blocks/contacts.css
+++ b/assets/styles/blocks/contacts.css
@@ -1,6 +1,6 @@
 .contacts .container {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 12px;
 }
